--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
+    "react-router-dom": "^4.1.2",
     "redux": "^3.7.2",
     "redux-promise": "^0.5.3",
     "sassdoc": "^2.3.0",
