--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "browser-sync": "^2.18.13",
+    "connect-history-api-fallback": "^1.3.0",
     "gridle": "^2.0.48",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
