--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.1.2",
     "redux": "^3.7.2",
+    "redux-form": "^7.0.3",
     "redux-promise": "^0.5.3",
     "sassdoc": "^2.3.0",
     "webpack": "^3.5.1"
